fixed header spacing

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -36,7 +36,7 @@ body {
   gap: 10px;
   max-width: 100%;
   overflow-wrap: normal;
-  padding: 0px 200px;
+  padding: 45px 200px;
 }
 
 header {
@@ -50,6 +50,8 @@ section {
   display: flex;
   justify-content: space-evenly;
   width: 100vw;
+  max-width: 900px;
+  max-height: 420px;
 }
 
 ul {  
@@ -101,6 +103,8 @@ ul {
     width: 25%;
     padding: 10px;
     position: relative;
+    max-height: 240px;
+    margin: 3px;
 
     h2 {
       font-size: 20px;
